# cli_lang_tool

./: Cargo.toml  README.md
examples/: clap.rs
examples/storage/: turk.json
src/: dictionary.rs  lib.rs  main.rs
