[package]
name = "cli_lang_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
anyhow = "1.0"
rand = "0.8.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"